--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Personal website" />
-    <link rel="icon" type="image/x-icon" href="icon.png"/>
+    <link rel="icon" type="image/x-icon" href="icon.ico"/>
     <title>%VITE_SITE_TITLE%</title>
   </head>
   <body>
